# msmp

./: Cargo.toml  LICENSE  README.md
crates/msmp-generator/: Cargo.toml
crates/msmp-generator/src/: lib.rs  main.rs  models.rs  utils.rs
crates/msmp-generator/src/generators/: method.rs  mod.rs  notification.rs  schema.rs
crates/msmp-types/: Cargo.toml
crates/msmp-types/src/: lib.rs  methods.rs  notifications.rs  schemas.rs
data/: rpc.discover-request.json
