[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/bananasov/msmp"
description = "A Minecraft Server Management Protocol implementation in Rust"
readme = "README.md"
authors = ["bananasov", "a55uka"]

[workspace]
resolver = "3"
members = ["crates/msmp-types"]

[workspace.dependencies]
snafu = "0.8.7"
tracing = "0.1.41"
