[package]
name = "msmp-generator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
authors.workspace = true

[[bin]]
name = "msmp-generator"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
convert_case = "0.8"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
